settingの見た目完成

--- a/TestCalendar/Test Calendar/Setting.storyboard
+++ b/TestCalendar/Test Calendar/Setting.storyboard
@@ -54,8 +54,8 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EKz-Oa-GLb">
                                         <rect key="frame" x="0.0" y="0.0" width="347" height="50"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ndL-F6-zPd">
-                                                <rect key="frame" x="27" y="15" width="42" height="20.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="朝に通知" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ndL-F6-zPd">
+                                                <rect key="frame" x="27" y="15.5" width="69.5" height="20.5"/>
                                                 <accessibility key="accessibilityConfiguration" identifier="title"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
@@ -80,7 +80,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Gb-MW-Dhb">
                                         <rect key="frame" x="0.0" y="50" width="347" height="150"/>
                                         <subviews>
-                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="c0F-Nl-pFw">
+                                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="c0F-Nl-pFw">
                                                 <rect key="frame" x="0.0" y="0.0" width="347" height="150"/>
                                                 <date key="date" timeIntervalSinceReferenceDate="529240285.67151201">
                                                     <!--2017-10-09 11:11:25 +0000-->
@@ -101,8 +101,8 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a58-uF-AI7">
                                         <rect key="frame" x="0.0" y="200" width="347" height="50"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5E0-QL-hLm">
-                                                <rect key="frame" x="27" y="15" width="42" height="20.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="勉強前に通知" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5E0-QL-hLm">
+                                                <rect key="frame" x="27" y="15" width="104" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -127,6 +127,10 @@
                                         <subviews>
                                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XT3-yE-fGx">
                                                 <rect key="frame" x="0.0" y="1" width="347" height="132"/>
+                                                <connections>
+                                                    <outlet property="dataSource" destination="qdv-t9-Pcw" id="ySh-NY-ym1"/>
+                                                    <outlet property="delegate" destination="qdv-t9-Pcw" id="T6e-K2-Sjy"/>
+                                                </connections>
                                             </pickerView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
